[package]
name = "rtxlauncher-core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "time", "fs"] }
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"] }
futures-util = "0.3"
zip = { version = "0.6", default-features = false, features = ["deflate", "time"] }
walkdir = "2"
fs_extra = "1"
filetime = "0.2"
directories = "5"
which = "6"
humansize = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tracing-appender = "0.2"
once_cell = "1"
hex = "0.4"
twoway = "0.2"

[features]
default = []

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_System_Registry",
    "Win32_UI_Shell",
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_Security",
]}
junction = "1"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", default-features = false, features = ["user"] }
shellexpand = "3"
which = "6"


