[package]
name = "rtxlauncher-ui-egui"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
rtxlauncher-core = { path = "../rtxlauncher-core" }
anyhow = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
eframe = { version = "0.29", default-features = false, features = ["glow"] }
egui = "0.29"
egui_extras = { version = "0.29", features = ["all_loaders"] }
rfd = "0.14"
chrono = { version = "0.4", features = ["clock", "std"] }
windows = { version = "0.58", features = ["Win32_UI_Shell", "Win32_Foundation", "Win32_UI_WindowsAndMessaging"], optional = true }

[package.metadata."winres"]
ProductName = "RTXLauncher"
FileDescription = "RTX Launcher (Rust, egui)"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_UI_Shell", "Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }


